BARC UAT/src/objects/Local_Operator__c.object
<CustomObject>
    <fields>
        <fullName>CAFID__c</fullName>
        <label>CAFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_City__c</fullName>
        <label>LCO / Partner City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_Code__c</fullName>
        <label>LCO / Partner Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_Country__c</fullName>
        <label>LCO / Partner Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_District__c</fullName>
        <label>LCO / Partner District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_Email__c</fullName>
        <label>LCO / Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_Phone__c</fullName>
        <label>LCO / Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_Pincode__c</fullName>
        <label>LCO / Partner Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCO_Partner_State__c</fullName>
        <label>LCO / Partner State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Operator__c</referenceTo>
        <relationshipName>Local_Operators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TSM_Mobile_No__c</fullName>
        <label>TSM Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TSM_Name__c</fullName>
        <label>TSM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner / Local Operator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LCO_Partner_Code__c</columns>
        <columns>LCO_Partner_Email__c</columns>
        <columns>LCO_Partner_Phone__c</columns>
        <columns>Operator__c</columns>
        <columns>LCO_Partner_City__c</columns>
        <columns>LCO_Partner_District__c</columns>
        <columns>LCO_Partner_State__c</columns>
        <columns>LCO_Partner_Country__c</columns>
        <columns>LCO_Partner_Pincode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LCO / Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner / Local Operators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>